--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.gbif</groupId>
         <artifactId>motherpom</artifactId>
-        <version>13-SNAPSHOT</version>
+        <version>13</version>
     </parent>
 
     <groupId>org.gbif</groupId>
@@ -13,6 +13,7 @@
     <version>1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <!-- TEST ONLY -->thub hook 
     <name>Darwin Core API</name>
     <description>Enumeration of all Darwin Core and Dublin Core terms</description>
     <url>https://github.com/gbif/${project.artifactId}</url>
