--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <junit.version>4.11</junit.version>
         <logback.version>1.0.13</logback.version>
         <slf4j.version>1.7.5</slf4j.version>
+        <jackson.version>1.9.12</jackson.version>
     </properties>
 
     <developers>
@@ -53,6 +54,16 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.codehaus.jackson</groupId>
+          <artifactId>jackson-core-asl</artifactId>
+          <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.codehaus.jackson</groupId>
+          <artifactId>jackson-mapper-asl</artifactId>
+          <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
