--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>org.gbif</groupId>
     <artifactId>dwc-api</artifactId>
-    <version>1.10</version>
+    <version>1.11-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Darwin Core API</name>
@@ -20,7 +20,7 @@
       <connection>scm:git:git@github.com:gbif/${project.artifactId}.git</connection>
       <url>https://github.com/gbif/${project.artifactId}</url>
       <developerConnection>scm:git:git@github.com:gbif/${project.artifactId}.git</developerConnection>
-      <tag>dwc-api-1.10</tag>
+      <tag>HEAD</tag>
     </scm>
 
     <properties>
