--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.gbif</groupId>
         <artifactId>motherpom</artifactId>
-        <version>20</version>
+        <version>23-SNAPSHOT</version>
     </parent>
 
     <groupId>org.gbif</groupId>
@@ -24,6 +24,9 @@
     </scm>
 
     <properties>
+        <!-- The IPT depends on this project and so this must stay at java 6 until IPT is upgraded -->
+        <jdkLevel>1.6</jdkLevel>
+
         <junit.version>4.11</junit.version>
         <logback.version>1.1.2</logback.version>
         <slf4j.version>1.7.7</slf4j.version>
