--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,9 @@
     <parent>
         <groupId>org.gbif</groupId>
         <artifactId>motherpom</artifactId>
-        <version>23-SNAPSHOT</version>
+        <version>23</version>
     </parent>
 
-    <groupId>org.gbif</groupId>
     <artifactId>dwc-api</artifactId>
     <version>1.13-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -27,9 +26,9 @@
         <!-- The IPT depends on this project and so this must stay at java 6 until IPT is upgraded -->
         <jdkLevel>1.6</jdkLevel>
 
-        <junit.version>4.11</junit.version>
-        <logback.version>1.1.2</logback.version>
-        <slf4j.version>1.7.7</slf4j.version>
+        <junit.version>4.12</junit.version>
+        <logback.version>1.1.3</logback.version>
+        <slf4j.version>1.7.12</slf4j.version>
         <jackson.version>1.9.12</jackson.version>
     </properties>
 
