--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <jdkLevel>1.8</jdkLevel>
     <main.basedir>${project.basedir}</main.basedir>
 
-    <junit.version>4.12</junit.version>
+    <junit.version>5.6.3</junit.version>
     <logback.version>1.2.3</logback.version>
     <slf4j.version>1.7.30</slf4j.version>
     <jackson.version>2.11.3</jackson.version>
@@ -108,8 +108,8 @@
       <version>${jackson.version}</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
