--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dwc-api</artifactId>
-  <version>1.31-jackson2-SNAPSHOT</version>
+  <version>1.31-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Darwin Core API</name>
