--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,11 @@
   <properties>
     <main.basedir>${project.basedir}</main.basedir>
 
+    <guava.version>31.1-jre</guava.version>
+    <jackson.version>2.14.1</jackson.version>
     <junit.version>5.9.1</junit.version>
     <logback.version>1.2.11</logback.version>
     <slf4j.version>1.7.36</slf4j.version>
-    <jackson.version>2.14.1</jackson.version>
   </properties>
 
   <developers>
@@ -85,6 +86,8 @@
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
     </dependency>
+
+    <!-- TESTS ONLY -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
@@ -96,6 +99,12 @@
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <scope>test</scope>
+      <version>${guava.version}</version>
     </dependency>
   </dependencies>
 
