--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>dwc-api</artifactId>
-  <version>1.46-SNAPSHOT</version>
+  <version>1.46-H3-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Darwin Core API</name>
