--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.gbif</groupId>
     <artifactId>motherpom</artifactId>
-    <version>54</version>
+    <version>58-SNAPSHOT</version>
   </parent>
 
   <artifactId>dwc-api</artifactId>
@@ -31,9 +31,8 @@
 
   <properties>
     <main.basedir>${project.basedir}</main.basedir>
-
     <guava.version>32.0.0-jre</guava.version>
-    <jackson.version>2.14.1</jackson.version>
+    <jackson.version>2.15.2</jackson.version>
     <junit.version>5.9.1</junit.version>
     <logback.version>1.2.11</logback.version>
     <slf4j.version>1.7.36</slf4j.version>
