--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
   <properties>
     <main.basedir>${project.basedir}</main.basedir>
+    <java.version>11</java.version>
 
     <guava.version>32.0.0-jre</guava.version>
     <jackson.version>2.15.2</jackson.version>
