--- a/pom.xml
+++ b/pom.xml
@@ -39,22 +39,12 @@
 
   <properties>
     <main.basedir>${project.basedir}</main.basedir>
-    <java.version>11</java.version>
+    <java.version>17</java.version>
 
-    <guava.version>32.0.0-jre</guava.version>
-    <jackson.version>2.15.2</jackson.version>
-    <junit.version>5.9.1</junit.version>
-    <logback.version>1.2.11</logback.version>
-    <slf4j.version>1.7.36</slf4j.version>
+    <jackson.version>2.19.4</jackson.version>
+    <junit.version>5.14.1</junit.version>
+    <slf4j.version>2.0.17</slf4j.version>
   </properties>
-
-  <developers>
-    <developer>
-      <name>Markus Döring</name>
-      <email>mdoering@gbif.org</email>
-      <timezone>+1</timezone>
-    </developer>
-  </developers>
 
   <repositories>
     <repository>
@@ -87,11 +77,6 @@
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
     </dependency>
@@ -99,21 +84,9 @@
     <!-- TESTS ONLY -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <artifactId>junit-jupiter</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <scope>test</scope>
-      <version>${guava.version}</version>
     </dependency>
   </dependencies>
 
